--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url = jdbc:mysql://5.135.218.27:3306/szymonchowaniec?characterEncoding=UTF-8
 spring.datasource.username = szymonchowaniec
 spring.datasource.password = 7xcpYcAX1Vk1g455
+
+spring.jpa.hibernate.ddl-auto=update
